# smol-sc

./: .gitignore  Cargo.toml
bun_tests/: README.md  bun.lockb  index.ts  index_0.ts  index_1.ts  index_2.ts  package.json
contracts/: Cargo.toml  Makefile  seed.sh
contracts/smol-sc/: Cargo.toml
contracts/smol-sc/src/: _unused.rs  lib.rs
contracts/smol-sc/src/tests/: color.rs  glyph.rs  mod.rs  offer.rs  utils.rs
zephyr/: Cargo.toml  cheatsheet  zephyr.toml
zephyr/src/: lib.rs
