[workspace]
resolver = "2"
members = [
  "smol-sc",
]

[workspace.dependencies]
# soroban-sdk = "22"
soroban-sdk = "22.0.0-rc.3.2"
# soroban-fixed-point-math = { version = "1.3.0" }
soroban-fixed-point-math = { path = "../ext/soroban-fixed-point-math" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true